Remove unused files and update project structure for clarity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "lightningtests"
 version = "0.1.0"
-description = "Add your description here"
+description = "A small package to test PyTorch Lightning"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
